0.38 at function
Fixed parametrized objects resolving.
Implemented at function.
Split return to returnValue and returnVoid.
Added And, Or and some vm functions similar to existing.
Removed semicolons from processor code.
Renamed process to compile, resolveRecursively to resolveLinks and some other functions.